Corrected mobile layout issue.

--- a/assets/css/stylish.scss
+++ b/assets/css/stylish.scss
@@ -504,6 +504,7 @@ dl {
 			top: 50px;
 			bottom: 35px;
 		}
+		clear: left;
 	}
 	
 	.codeblock div {
